--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.17",
+    "@mui/material": "^5.15.17",
     "axios": "^1.6.8",
+    "install": "^0.13.0",
+    "npm": "^10.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
     "react-jwt": "^1.2.1",
     "react-router-dom": "^6.23.1",
-    "react-toastify": "^10.0.5",
-    "styled-components": "^6.1.11"
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/node": "^20.12.11",
