--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.8",
     "install": "^0.13.0",
     "npm": "^10.7.0",
