--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "msw": "^2.3.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
