--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.17",
     "axios": "^1.6.8",
     "install": "^0.13.0",
+    "normalize.css": "^8.0.1",
     "npm": "^10.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
