[BaoHMQ] Deploy attempt #1

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Mikocay/deploy-github",
+  "homepage": "https://baoha7204/github.io/swp391-debo-fe",
   "name": "swp391-debo-fe",
   "private": false,
   "version": "0.0.0",
