--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@hookform/resolvers": "^3.4.2",
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
+    "@mui/x-date-pickers": "^7.6.2",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.8",
+    "dayjs": "^1.11.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
