--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.6.8",
     "dayjs": "^1.11.11",
     "gh-pages": "^6.1.1",
+    "material-ui-popup-state": "^5.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
