--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@hookform/resolvers": "^3.4.2",
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
+    "@mui/x-charts": "^7.8.0",
     "@mui/x-date-pickers": "^7.6.2",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.8",
