--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-hook-form": "^7.51.4",
     "react-jwt": "^1.2.1",
     "react-router-dom": "^6.23.1",
+    "react-router-prompt": "^0.7.0",
     "react-toastify": "^10.0.5",
     "zod": "^3.23.8"
   },
