--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ckeditor5-premium-features": "^42.0.0",
     "dayjs": "^1.11.11",
     "gh-pages": "^6.1.1",
+    "material-react-table": "^2.13.0",
     "material-ui-popup-state": "^5.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
