[BaoHMQ] fix conflict #1

--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "ckeditor5-premium-features": "^42.0.0",
     "dayjs": "^1.11.11",
     "gh-pages": "^6.1.1",
-    "material-react-table": "^2.13.0",
     "material-ui-popup-state": "^5.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -38,7 +37,8 @@
     "react-router-dom": "^6.23.1",
     "react-router-prompt": "^0.7.0",
     "react-toastify": "^10.0.5",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "material-react-table": "^2.13.0"
   },
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
