--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dayjs": "^1.11.11",
     "gh-pages": "^6.1.1",
     "jspdf": "^2.5.1",
+    "material-react-table": "^2.13.0",
     "material-ui-popup-state": "^5.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
